<resources>
    <string name="app_name">Arch</string>
    <string name="show_blog_items">Show all blog items</string>
    <string name="show_blog_item">Show blog item</string>
    <string name="show_blog_item_vm">Show blog item vm</string>
    <string name="views_count">👁</string>
    <string name="upVotes">👍</string>
    <string name="downVotes">👎</string>
    <string name="go_back">Go back</string>
    <string name="refresh">Refresh</string>
    <string name="plus">+</string>
</resources>
